# MyMooNMD

./: .hgignore  1  CMakeLists.txt  ConfigParMoON.inc  Make.inc  Makefile2D  Makefile3D  README.md  UserConfig.cmake  clean_cmake.sh  config.cmake  dummy.f  makefile
Examples/: CMakeLists.txt  Example2D.C  Example2D.h  Example3D.C  Example_CD2D.C  Example_CD3D.h  Example_Darcy2D.C  Example_NSE2D.C  Example_NSE2D.h  Example_NSE3D.C
Examples/CD_2D/: Hemker1996.h  SineLaplace.h  TwoInteriorLayers.h
Examples/CD_3D/: Laplace.h
Examples/NSE_2D/: Poiseuille.h  SinCos.h
Examples/NSE_3D/: AnsatzLinConst.h  AnsatzQuadLin.h  BSExample.h  CircularChannel.h
Examples/TCD_2D/: exp.h
Examples/TCD_3D/: amc.h  cancer_exp_3d_nd.h
Examples/TNSE_2D/: Bsp1.h  DrivenCavity.h
Examples/obj2D/: makefile
Examples/obj3D/: makefile
Examples/obj3D_par/: makefile
Main_Users/StokesDarcy2D/: CMakeLists.txt  InterfaceFunction.C  StokesProblem.h  auxiliaryFunctions.C  auxiliaryFunctions.h  main.C
src/Matrix/: BlockFEMatrix.C  BlockMatrix.C  BlockMatrix2D.C  BlockMatrix3D.C  BlockMatrixCD2D.C  BlockMatrixCD3D.C  BlockMatrixDarcy2D.C  BlockMatrixNSE2D.C  BlockPattern.C  BlockVector.C  CMakeLists.txt  ColoredBlockFEMatrix.C  ColoredBlockMatrix.C  DenseMatrix.C  FEMatrix.C  Matrix.C  Matrix2D.C  Matrix3D.C  SquareMatrix.C  SquareMatrix2D.C  SquareMatrix3D.C  Structure.C
src/Parallel/: CMakeLists.txt  MeshPartition.C  MeshPartitionInOut.C  MumpsSolver.C  MumpsWrapper.C  NSE_ParSolver.C  NSE_ParSolver2.C  NSE_ParSolver4.C  ParDirectSolver.C  ParFECommunicator3D.C  ParFEMapper3D.C  ParMGComponents3D.C  ParSolver.C  ParVector.C  ParVector3D.C  ParVectorNSE3D.C  Scalar_ParSolver.C
src/QuadFormulas/: CMakeLists.txt  QuadFormula.C  QuadFormula1D.C  QuadFormula2D.C  QuadFormula3D.C  QuadFormulaHexa.C  QuadFormulaQuad.C  QuadFormulaTetra.C  QuadFormulaTria.C
src/System/: Assemble.C  AssembleMat3D.C  Brinkman2D.C  Brinkman3D.C  CD2D.C  CD2D_AFC.C  CD3D.C  CD3D_AFC.C  CMakeLists.txt  ConvectionDiffusion.C  ConvectionDiffusion_AFC.C  Darcy.C  Darcy2D.C  NSE2D.C  NSE3D.C  NavierStokes.C  PR_NSE2D.C  PR_Time_NSE2D.C  Particle_Tracer.C  Particles.C  Residuals.C  SystemCD2D.C  SystemCD3D.C  SystemMat2D.C  SystemMat3D.C  SystemMatDarcy2D.C  SystemMatNSE2D.C  SystemMatNSE3D.C  SystemMatScalar2D.C  SystemMatScalar3D.C  SystemMatTNSE2D.C  SystemMatTNSE2D_ALE.C  SystemMatTimeScalar2D.C  SystemMatTimeScalar2D_ALE.C  SystemMatTimeScalar3D.C  SystemNSE2D.C  SystemNSE3D.C  SystemTCD2D.C  SystemTCD2D_ALE.C  SystemTNSE2D.C  (+9 more)
test/: CMakeLists.txt  Hdiv_element_test.c++  analytical_function_test.c++  block_fe_matrix_test.c++  block_matrix_test.c++  boundary_condition_test.c++  boundary_data_test.c++  brinkman2d_test.c++  cd2d_adaptive_test.c++  cd2d_afc_test.c++  cd2d_test.c++  cd3d_afc_test.c++  cd3d_solvers_test.c++  cd3d_test.c++  collection_test.c++  colored_block_fe_matrix_test.c++  colored_block_matrix_test.c++  darcy2d_test.c++  darcy_test.c++  dense_matrix_test.c++  direct_solver_test.c++  domain_partitioning_read_write_test.c++  domain_refinement_test.c++  function_evaluation_test.c++  iterative_solver_test.c++  linesEval_test.c++  lsc_test.c++  matrix_test.c++  mesh3d_test.c++  multigrid_test.c++  mumps_test_1.c++  mumps_test_2.c++  mumps_wrapper_test.c++  nse2d_multigrid_test.c++  nse2d_test.c++  nse3d_solvers_test.c++  parameter_database_test.c++  read_write_fe_function_test.c++  read_write_fe_function_test_MPI.c++  reconstruction_test.c++  (+17 more)
user_projects/: 3D_Flow_Concentration_Particles_ParMooN.c++  BlockFEMatrix.C  BlockFEMatrix.h  BlockFEMatrixPr.cpp  BlockFEMatrixPr.h  BlockFEMatrix_PR.cpp  BlockFEMatrix_PR.h  CD2D_ParMooN.C  CD2D_ParMooN_Layer.C  CD2D_mesh_adaptation.cpp  CMakeLists.txt  ColoredBlockFEMatrix.C  ColoredBlockFEMatrix.h  ColoredBlockMatrix.C  ColoredBlockMatrix.h  CoupledCDR.C  CoupledCDR2D_ParMooN.C  CoupledNSE2D_Stress_ParMooN.cpp  CoupledNavierStokesStress.cpp  CoupledNavierStokesStress.h  Coupled_NS_Stress_Local_routines.cpp  Coupled_NS_Stress_Local_routines.h  Coupled_Time_CDR2D_ParMooN.C  Example_CoupledNS_Stress.cpp  Example_CoupledNS_Stress.h  Example_NSPR_NSE2D.cpp  Example_NSPR_NSE2D.h  Example_TnseTcd2D.cpp  Example_TnseTcd2D.h  Extra_Routines_PR.cpp  Extra_Routines_PR.h  Flow_And_Concentrations_ParMooN.c++  Flow_Concentration_Particles_ParMooN.c++  LocalAssembleCoupledStressNS.cpp  LocalAssembleCoupledStressNS.h  LocalAssemblingPR.cpp  LocalAssemblingPR.h  MPhase2D_ParMooN.cpp  MultiPhase.cpp  MultiPhase.h  (+29 more)
user_projects/0_MultiphasePrograms/: Multiphase2D_ParMooN.C
user_projects/StokesDarcy2D/: CMakeLists.txt  DarcyPrimal.C  DarcyPrimal.h  DarcyProblem.C  DarcyProblem.h  InterfaceFunction.C  InterfaceFunction.h  StokesDarcy2D.C  StokesDarcy2D.h  StokesProblem.C  StokesProblem.h  auxiliaryFunctions.C  auxiliaryFunctions.h  main.C
user_projects/StokesDarcy2DAdaptive/: StoDa2DRefinementStrategy.C  StoDa2DRefinementStrategy.h
user_projects/boundary_controlled_optimization/: BCO2D_ParMooN.cpp  BoundaryControlledOptimization.cpp  BoundaryControlledOptimization.hpp  CMakeLists.txt  NSE2D_Adjoint.cpp  NSE2D_Adjoint.hpp  NavierStokes_Adjoint.cpp  NavierStokes_Adjoint.hpp  TBCO2D_ParMooN.cpp  TBCO_ParMooN.cpp  TimeNavierStokes_Adjoint.cpp  TimeNavierStokes_Adjoint.hpp  Time_BoundaryControlledOptimization.cpp  Time_BoundaryControlledOptimization.hpp  Time_NSE2D_Adjoint.cpp  Time_NSE2D_Adjoint.hpp  bco2d_tbco2d_tests.cpp  main.cpp  parmoon_optimization_routines.hpp
user_projects/examples/: ASA_crystallizer.h  Axisymmetric_ASA_Crystallizer.h  Constant_functions.h  Test_Time.h  Three_species_in_flow.h
user_projects/geothermal_plant_position/: CD2D_Temperature.cpp  CD2D_Temperature.hpp  CD3D_Temperature.cpp  CD3D_Temperature.hpp  CMakeLists.txt  GPPO2D_ParMooN.cpp  GPPO3D_ParMooN.cpp  GeothermalPlantsPositionOptimization.cpp  GeothermalPlantsPositionOptimization.hpp  GeothermalPlantsPositionOptimization3D.cpp  GeothermalPlantsPositionOptimization3D.hpp  NSE2D_GPPO.cpp  NSE2D_GPPO.hpp  NSE3D_GPPO.cpp  NSE3D_GPPO.hpp  NSE_GPPO.cpp  NSE_GPPO.hpp  TCD2D_Temperature.cpp  (+6 more)
(+1961 files in other folders)
